--- a/static/scss/variables.scss
+++ b/static/scss/variables.scss
@@ -21,8 +21,8 @@ $spacing-lg-2x: 64px;
 $base-padding: $spacing;
 $container-padding: 0 50px;
 
-$margin-bottom: 150px;
-$margin-bottom-mobile: 80px;
+$margin-bottom: 200px;
+$margin-bottom-mobile: 100px;
 
 // screen sizes
 $container-width: 1390px;
